# RobustCBM

./: .gitignore  AGENTS.md  PBM.yaml  README.md  VQ.py  attack.py  config.yaml  default.yaml  draw.py  experiment.py  experiment.yaml  exps.yaml  hsic.py  main.py  mtl.py  plot.ipynb  pyproject.toml  requirements.txt  result.csv  run  run.py  sweep.py  test.py  train.py  train.yaml  utils.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
attacks/: __init__.py  apgd.py  apgdt.py  attack.py  autoattack.py  autopgd_base.py  checks.py  fab.py  fab_base.py  fab_pt.py  fab_tf.py  pgd.py  square.py
callbacks/: AdversarialEarlyStop.py  __init__.py
config/: Adv_CBM_CUB.yaml  Adv_CEM_CUB.yaml  Adv_RCBM_CUB.yaml  Adv_RCEM_CUB.yaml  Adv_ResNet_CUB.yaml  Adv_VCBM_CUB.yaml  Adv_VCEM_CUB.yaml  BoolCBM_CUB.yaml  CBM_AwA.yaml  CBM_CUB.yaml  CEM_AwA.yaml  CEM_CUB.yaml  RCBM_AwA.yaml  RCBM_CUB.yaml  RCEM_AwA.yaml  RCEM_CUB.yaml  ResNet_AwA.yaml  ResNet_CUB.yaml  VCBM_CUB.yaml  VCEM_CUB.yaml  VQCBM_CUB.yaml  VQCEM_CUB.yaml  resnet_AwA.yaml  resnet_CUB.yaml
configs/: main.yaml
dataprovider/: AwA.py  CUB.py
dataset/: AwA.py  AwA_split.py  CUB.py  __init__.py  celeba.py
exps/: cub_adv_inceptionv3_backbone.yaml  cub_adv_inceptionv3_cbm.yaml  cub_adv_inceptionv3_cem.yaml  cub_adv_resnet_backbone.yaml  cub_adv_resnet_cbm.yaml  cub_adv_resnet_cem.yaml  cub_std_inceptionv3_backbone.yaml  cub_std_inceptionv3_cbm.yaml  cub_std_inceptionv3_cem.yaml  cub_std_resnet_backbone.yaml  cub_std_resnet_cbm.yaml  cub_std_resnet_cem.yaml
model/: CBM.py  CEM.py  CLCBM.py  RCBM.py  (+12 more)
(+98 files in other folders)
